--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.0.4",
     "angularfire2": "^5.0.0-rc.6",
+    "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.4.1",
     "firebase": "^4.12.0",
     "firebase-admin": "^5.11.0",
     "font-awesome": "^4.7.0",
+    "ng2-img-max": "^2.1.15",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
