--- a/package.json
+++ b/package.json
@@ -22,6 +22,11 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^6.0.1",
+    "@ngrx/router-store": "^6.0.1",
+    "@ngrx/store": "^6.0.1",
+    "@ngrx/store-devtools": "^6.0.1",
     "angularfire2": "^5.0.0-rc.10",
     "blueimp-canvas-to-blob": "^3.14.0",
     "bootstrap": "^4.1.1",
@@ -41,6 +46,7 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.112",
     "codelyzer": "^4.3.0",
+    "ngrx-store-freeze": "^0.2.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^2.0.2",
