--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
     "angularfire2": "^5.0.0-rc.10",
     "blueimp-canvas-to-blob": "^3.14.0",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.7",
     "firebase": "^5.0.4",
     "font-awesome": "^4.7.0",
@@ -34,8 +34,9 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^6.0.7",
-    "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-angular": "^0.800.1",
+    "@angular/cli": "^8.0.1",
+    "@angular/compiler-cli": "^8.0.0",
     "@angular/language-service": "^6.0.3",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
@@ -43,16 +44,15 @@
     "codelyzer": "^4.3.0",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^1.4.3",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^6.0.0",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.6"
+    "typescript": "~2.7.2"
   }
 }
